# rudel

./: .env.example  .eslint-baseline.json  .gitattributes  .gitignore  .release-please-manifest.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  biome.json  eslint.config.mjs  fly.toml  package.json  playwright-smoke.spec.mjs  release-please-config.json  skills-lock.json  turbo.json
.claude/: settings.json
.github/workflows/: ci.yml  pr-title.yml  publish.yml  release-desktop.yml  release.yml
_archive/web/: AGENTS.md  components.json  shadcn-preset.json  tsconfig.app.json
apps/api/: .env.example  AGENTS.md  package.json  tsconfig.json  turbo.json
apps/cli/: AGENTS.md  CHANGELOG.md  README.md  package.json
apps/desktop/: AGENTS.md  package.json  tsconfig.json
apps/desktop-tauri/: AGENTS.md  package.json
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json
apps/desktop-tauri/src-tauri/icons/: icon.icns
apps/desktop-tauri/src-tauri/src/: commands.rs  lib.rs  main.rs
crates/: AGENTS.md
docs/: archetype-clickhouse-pipeline.md  archetype-taxonomy.md  architecture.md  claude-token-accounting-v2.md  codex-token-accounting.md  session-pipeline-future.md  skill-blueprints-mlp.md
scripts/: capture-webgl-site.ts  check-eslint-gate.mjs  decimal-e2e-gate.ts  dev-local.sh  generate-wrapped-decimal-claims.ts  init-clickhouse-local.sql  lint-walkin-apple-hig.ts  lint-wrapped-apple-hig.ts  release-cli.test.ts  release-cli.ts  seed-analytics-test-data.ts
(+966 files in other folders)
