[package]
name = "rudel-desktop-tauri"
version = "0.0.0"
edition = "2021"

[lib]
name = "rudel_desktop_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rudel-local = { path = "../../../crates/rudel-local" }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
