[package]
name = "rudel-desktop-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "rudel_desktop_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rudel-local = { path = "../../../crates/rudel-local" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.1"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
